# postfix_watcher

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
ansible/: postfix_watcher.yml
config/: postfix-watcher.yaml  postfix-watcher.yaml.dist
postfix_watcher/: actions.py  config.py  logging.py  rules.py  watcher.py
systemd/: postfix-watcher.service
